# advent-of-code

./: Cargo.toml  README.md  template.rs
2024/: README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  problem.rs  year.rs
crates/y2023/: Cargo.toml
crates/y2023/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  lib.rs
crates/y2024/: Cargo.toml
crates/y2024/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  lib.rs
crates/y2025/: Cargo.toml
crates/y2025/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  lib.rs
src/: main.rs
