[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "./crates/shared" }
y2023 = { path = "./crates/y2023" }
y2024 = { path = "./crates/y2024" }
y2025 = { path = "./crates/y2025" }
